#7 Fix editor images not showing

--- a/src/app/components/editor/editor.component.css
+++ b/src/app/components/editor/editor.component.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   height: 100%;
   cursor: pointer;
 }
@@ -28,8 +27,8 @@
 }
 
 .header-button {
-  min-width: 32px !important;
-  height: 32px;
+  min-width: 33px !important;
+  height: 33px;
   padding: 0;
 
   border-radius: 0;
@@ -37,6 +36,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.minimized-header-button-icon {
+  margin-top: 5px;
 }
 
 .header-separator {
@@ -49,7 +52,6 @@
   height: 100%;
 
   display: flex;
-  justify-content: center;
   align-items: center;
   
   font-weight: 500;
@@ -87,7 +89,6 @@
 
 .commands {
   background-color: white;
-  box-shadow: 5px -5px 10px 0px rgb(0 0 0 / 10%);
   z-index: 1;
   border-top: 1px solid darkgray;
 }
