--- a/src/app/components/tree/tree.component.css
+++ b/src/app/components/tree/tree.component.css
@@ -7,7 +7,7 @@
 .filter {
   display: flex;
   align-items: center;
-  height: 32px;
+  height: 33px;
   z-index: 1;
   border-top: 1px solid lightgray;
   border-bottom: 1px solid lightgray;
