--- a/src/styles.css
+++ b/src/styles.css
@@ -43,7 +43,7 @@ img {
   padding: 0.2em 0 0.5em 0;
 }
 .mat-option {
-  height: 32px !important;
+  height: 33px !important;
   font-size: 14px !important;
 }
 .mat-form-field-appearance-outline .mat-form-field-outline-start {
@@ -65,24 +65,27 @@ img {
   background-color: white;
 }
 .button {
-  height: 31px !important;
+  height: 33px !important;
   box-shadow: none !important;
   background-color: white;
   border: 1px solid darkgray !important;
   border-radius: 0 !important;
 }
 .button-small {
-  width: 32px !important;
-  height: 32px !important;
-  min-width: 32px !important;
+  width: 33 !important;
+  height: 33px !important;
+  min-width: 33px !important;
   padding: 0 !important;
 }
 .shadow-small-down {
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 10%) !important;
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 20%) !important;
 }
 .shadow-small-up {
-  box-shadow: 0px -5px 10px rgba(0, 0, 0, 10%) !important;
+  box-shadow: 0px -3px 5px rgba(0, 0, 0, 20%) !important;
+}
+.shadow-small-right {
+  box-shadow: 3px 0px 5px rgba(0, 0, 0, 20%) !important;
 }
 .shadow-small-left {
-  box-shadow: 5px 0px 5px rgba(0, 0, 0, 15%) !important;
+  box-shadow: -3px 0px 5px rgba(0, 0, 0, 20%) !important;
 }
